update last 4 cards with correct links to their respective deployed apps

--- a/portfolio.html
+++ b/portfolio.html
@@ -98,73 +98,82 @@
                         </a>
                     </div>
                     <div class="card bg-clear text-dark" style=" width:25rem;">
+                        <a href="https://github.com/TheWintersFox/GoodReadMe" alt="Good Readme Github Repository" >
                         <img class="card-img" src="assets/images/goodreadme.png" alt="Good Readme Generator">
+                            <div class="card-img-overlay d-flex flex-column justify-content-left">
+
+                            </div>
+                            <h4 class="card title text-center goodreadme">GoodReadMe Generator</h4>
+                            <h5><strong>Summary:</strong></h5>
+                            <p> This is to allow users to create a Readme after they're done creating their application.
+                                This automates the process by asking the user questions about their app. The user then
+                                can
+                                take the printed out Readme and upload it to their project.</p>
+
+                            <Br>
+
+                            <h5> <strong>Technology Used: </strong> </h5>
+
+                            <p>Inquirer, Markdown, FS,
+                                bootstrap, JavaScript, Jquery
+                            </p>
+
+                    </div>
+                    <div class="card bg-clear text-dark" style=" width:25rem;">
+                        <a href="https://thewintersfox.github.io/JavaScriptCodeQuiz/" alt="Harrypotter Javascript dynamically generated code quiz" >
+                        <img class="card-img" src="assets/images/gifofquiz.gif" alt="jsCodeQuiz">
                         <div class="card-img-overlay d-flex flex-column justify-content-left">
-
                         </div>
-                        <h4 class="card title text-center goodreadme">GoodReadMe Generator</h4>
-                        <h5><strong>Summary:</strong></h5>
-                        <p> This is to allow users to create a Readme after they're done creating their application.
-                            This automates the process by asking the user questions about their app. The user then can
-                            take the printed out Readme and upload it to their project.</p>
 
+                        <h4 class="card title text-center jsCodeQuiz">JavaScript Code Quiz</h4>
+                        <h5><strong>Summary:</strong></h5>
+                        <p>This codequiz was made entirely using dynamically created Javascript.</p>
                         <Br>
 
                         <h5> <strong>Technology Used: </strong> </h5>
 
-                        <p>Inquirer, Markdown, FS,
-                            bootstrap, JavaScript, Jquery
+                        <p> JavaScript, Css, HTML
                         </p>
-
-                    </div>
-                    <div class="card bg-clear text-dark" style=" width:25rem;">
-                        <img class="card-img" src="assets/images/gifofquiz.gif" alt="jsCodeQuiz">
-                        <div class="card-img-overlay d-flex flex-column justify-content-left">
-                        </div>
-                    
-                            <h4 class="card title text-center jsCodeQuiz">JavaScript Code Quiz</h4>
-                            <h5><strong>Summary:</strong></h5>
-                            <p>This codequiz was made entirely using dynamically created Javascript.</p>
-                            <Br>
-
-                            <h5> <strong>Technology Used: </strong> </h5>
-
-                            <p> JavaScript, Css, HTML
-                            </p>
-                        </div>
-                    </div>
-                    <div class="card bg-clear text-dark" style="Width: 25rem">
-                        <img class="card-img" src="assets/images/employeetracker.png" alt="employeetracker">
-                        <div class="card-img-overlay d-flex flex-column justify-content-left">
-                        </div>
-                            <h4 class="card title text-center jsCodeQuiz">EmployeeTrackerApp</h4>
-                            <h5><strong>Summary:</strong></h5>
-                            <p>Employee Tracker is meant to keep track of your employees, departments, and roles.  When the server starts the CLI prompts the user if they would like to Add, View, or Update.  From here it takes the user through each one of those options that the user previously chose.  EmployeeTracker will dynamically update fields within the database.</p>
-                            <Br>
-
-                            <h5> <strong>Technology Used: </strong> </h5>
-
-                            <p> Inquirer, mySQL, console.table, JavaScript, Css, HTML
-                            </p>
-                        </div>
-                    </div>
-                    <div class="card bg-clear text-dark" style="Width: 25rem">
-                        <img class="card-img" src="assets/images/workdayplanner.png" alt="Workday Planner">
-                        <div class="card-img-overlay d-flex flex-column justify-content-left">
-                        </div>
-                            <h4 class="card title text-center workdayPlanner">Workday Planner</h4>
-                            <h5><strong>Summary:</strong></h5>
-                            <p>Workday planner allows user to input text then save the text to local storage.  The text for that specific row will turn red when past due.  This allows users to plan their day. </p>
-                            <Br>
-
-                            <h5> <strong>Technology Used: </strong> </h5>
-
-                            <p> LocalStorage, JavaScript, Css, HTML
-                            </p>
-                        </div>
                     </div>
                 </div>
+                <div class="card bg-clear text-dark" style="Width: 25rem">
+                    <a href="https://github.com/TheWintersFox/EmployeeSummaryNode" alt="Employeetracker CLI inquirer app" >
+                    <img class="card-img" src="assets/images/employeetracker.png" alt="employeetracker">
+                    <div class="card-img-overlay d-flex flex-column justify-content-left">
+                    </div>
+                    <h4 class="card title text-center jsCodeQuiz">EmployeeTrackerApp</h4>
+                    <h5><strong>Summary:</strong></h5>
+                    <p>Employee Tracker is meant to keep track of your employees, departments, and roles. When the
+                        server starts the CLI prompts the user if they would like to Add, View, or Update. From here it
+                        takes the user through each one of those options that the user previously chose. EmployeeTracker
+                        will dynamically update fields within the database.</p>
+                    <Br>
+
+                    <h5> <strong>Technology Used: </strong> </h5>
+
+                    <p> Inquirer, mySQL, console.table, JavaScript, Css, HTML
+                    </p>
+                </div>
             </div>
+            <div class="card bg-clear text-dark" style="Width: 25rem">
+                <a href="https://thewintersfox.github.io/DayPlanner/" alt="Employeetracker CLI inquirer app" >
+                <img class="card-img" src="assets/images/workdayplanner.png" alt="Workday Planner">
+                <div class="card-img-overlay d-flex flex-column justify-content-left">
+                </div>
+                <h4 class="card title text-center workdayPlanner">Workday Planner</h4>
+                <h5><strong>Summary:</strong></h5>
+                <p>Workday planner allows user to input text then save the text to local storage. The text for that
+                    specific row will turn red when past due. This allows users to plan their day. </p>
+                <Br>
+
+                <h5> <strong>Technology Used: </strong> </h5>
+
+                <p> LocalStorage, JavaScript, Css, HTML
+                </p>
+            </div>
+        </div>
+        </div>
+        </div>
         </div>
     </form>
 
